# Capture---browser

./: CMakeLists.txt  LICENSE  README.md  browser.pro
.github/workflows/: windows_build.yml
src/: main.cpp
src/core/: browser.cpp  browser.h  tabmanager.cpp  tabmanager.h
